--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ line-length = 120
 [tool.isort]
 line_length = 120
 profile = "black"
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [build-system]
 requires = ["poetry-core>=1.0.8"]
 build-backend = "poetry.core.masonry.api"
