--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-name: Build and publish on PyPI
+name: Build and publish on PyPI (disabled)
 
+# Disabled automatic triggers to prevent publishing to PyPI. To run manually,
+# trigger the workflow via "Run workflow" in the GitHub UI.
 on:
-  push
+  workflow_dispatch:
 
 jobs:
   tests:
